# mesgmon

./: Cargo.toml  docker-compose.yml
src/: main.rs
src/application/: app_state.rs  mod.rs
src/application/services/: mod.rs  product_service.rs  user_service.rs
src/domain/: mod.rs
src/domain/dto/: credentials.rs  mod.rs  product_description.rs
src/domain/interfaces/: database.rs  identifiable.rs  message_broker.rs  mod.rs  repository.rs  service.rs
src/domain/models/: mod.rs  product.rs  user.rs
src/handlers/: mod.rs
src/handlers/product/: create.rs  delete.rs  update.rs
src/handlers/user/: create.rs  delete.rs  mod.rs  update.rs
src/infrastructure/: kafka.rs  mod.rs  postgres.rs  repository.rs
