[package]
name = "mesgmon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-postgres = "0.7.12"
deadpool-postgres = { version = "0.14.0", features = ["rt_tokio_1"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "rt", "macros"] }
rdkafka = { version = "0.36.2", features = ["tokio", "dynamic-linking"] }
log = "0.4.22"
env_logger = "0.11.5"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
axum = "0.7.7"
dotenvy = "0.15.7"